# InteligenciaLocalAsistida

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  config.yaml  docker-compose.yml  hispan_shield_guardian.py  main.py  ollama_geoint.modelfile  pyproject.toml  requirements.txt  setup.bat  setup.sh  start_local_app.bat  watchdog.py
prompts/: analysis_es.txt  contradiction_es.txt  forecast_es.txt  report_bilingual.txt  synthesis_es.txt
providers/: gdelt_provider.py  newsapi_provider.py  rss_provider.py  youtube_provider.py
social_monitor/: collector.py  config_social.yaml
social_monitor/providers/: facebook_provider.py  reddit_provider.py  telegram_provider.py  twitter_provider.py
social_monitor/utils/: sentiment.py  social_cleaner.py
sources/: sources.json
tests/: conftest.py
tests/unit/: test_io.py  test_llm.py
utils/: database.py  embeddings.py  export.py  factcheck.py  io.py  llm.py  regions.py  scraper.py
web/: app.js  styles.css
