[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inteligencia-geopolitica"
version = "2.0.0"
description = "Weekly geopolitical intelligence report generator with local LLM (Ollama)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "jinja2>=3.1.4",
    "tqdm>=4.66.5",
    "tenacity>=9.0.0",
    "rich>=13.8.0",
    "pandas>=2.2.2",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "trafilatura>=1.12.0",
    "openai>=1.44.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --strict-config --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "llm: Tests requiring LLM",
    "network: Tests requiring network access",
]

[tool.coverage.run]
source = ["utils", "providers", "main"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E", "F", "I", "W", "C90", "N", "UP", "B", "SIM", "T20", "PT", "PTH",
    "ERA", "PL", "TRY", "NPY", "ARG", "RET", "PERF", "ASYNC", "TCH",
]
ignore = ["E501", "TRY003"]
fixable = ["I", "F", "W", "E", "C90", "N", "UP", "B", "SIM", "PT", "PTH", "PL", "TRY", "NPY", "ARG", "RET", "PERF", "ASYNC", "TCH"]
unfixable = ["ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "ARG001"]
"main.py" = ["TRY003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.bandit]
exclude_dirs = ["tests", "__pycache__", ".venv"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]